<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/love"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:background="@drawable/background_layout"
        android:padding="11dp"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_gravity="center"
            android:textSize="35dp"
            android:padding="11dp"
            android:textColor="@color/white"
            android:text="@string/welcome"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <LinearLayout
            android:layout_marginTop="44dp"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <Button
                android:layout_margin="11dp"
                android:id="@+id/welcome_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:textColor="@color/white"
                android:layout_marginTop="11dp"
                android:backgroundTint="@color/red_white"
                android:textAllCaps="false"
                tools:ignore="ButtonStyle" />
            <Button
                android:layout_margin="11dp"
                android:textAllCaps="false"
                android:backgroundTint="@color/red_white"
                android:id="@+id/welcome_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter"
                android:textColor="@color/white"
                android:layout_marginTop="11dp"
                tools:ignore="ButtonStyle" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>