<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:gravity="center"
    android:background="@drawable/love"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/menu_register"
        android:background="@drawable/background_layout"
        android:layout_margin="44dp"
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="44dp"
            android:textColor="@color/white"
            android:gravity="center"
            android:text="@string/enter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/email_login"
            android:textSize="18sp"
            android:layout_marginTop="66dp"
            android:textColorHint="@color/grey"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="Autofill,TextFields"
            android:hint="@string/email"
            android:textColor="@color/black"
            />
        <EditText
            android:id="@+id/password_login"
            android:textSize="18sp"
            android:textColorHint="@color/grey"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="Autofill,TextFields"
            android:hint="@string/password"
            android:textColor="@color/black"
            android:layout_marginTop="11dp"
            />
        <Button
            android:textAllCaps="false"
            android:id="@+id/btn_login"
            android:backgroundTint="@color/red_white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter"
            android:textColor="@color/white"
            android:layout_marginTop="54dp"
            />
    </LinearLayout>


</RelativeLayout>